--- a/Werkstuk1/Base.lproj/Main.storyboard
+++ b/Werkstuk1/Base.lproj/Main.storyboard
@@ -35,47 +35,53 @@
             </objects>
             <point key="canvasLocation" x="2480.8000000000002" y="341.37931034482762"/>
         </scene>
-        <!--Item 2-->
+        <!--View Controller-->
         <scene sceneID="542-H6-x9n">
             <objects>
                 <viewController id="Lie-Sg-8ha" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wto-Ep-TVZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Ek0-Ux-I3a">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="M0F-7q-QSz"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="cqb-wW-TyE"/>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="cqb-wW-TyE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FCb-q9-elT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="665" y="1010"/>
+            <point key="canvasLocation" x="664.79999999999995" y="1009.7451274362819"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="oCb-yN-AcU">
             <objects>
-                <tableViewController id="Cxt-WW-t1p" sceneMemberID="viewController">
+                <tableViewController id="Cxt-WW-t1p" customClass="TableViewController" customModule="Werkstuk1" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="XfO-Q1-KVb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="persoonCell" textLabel="IUs-AY-NgD" imageView="7kq-Ql-e8r" rowHeight="106" style="IBUITableViewCellStyleDefault" id="HNb-Xh-5rs">
-                                <rect key="frame" x="0.0" y="28" width="375" height="106"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="persoonCell" textLabel="IUs-AY-NgD" imageView="7kq-Ql-e8r" rowHeight="122" style="IBUITableViewCellStyleDefault" id="HNb-Xh-5rs">
+                                <rect key="frame" x="0.0" y="28" width="375" height="122"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HNb-Xh-5rs" id="DZK-Ns-6He">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="121.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IUs-AY-NgD">
-                                            <rect key="frame" x="116" y="0.0" width="243" height="105.5"/>
+                                            <rect key="frame" x="129" y="0.0" width="230" height="121.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="ObiWanKenobi" id="7kq-Ql-e8r">
-                                            <rect key="frame" x="16" y="0.0" width="85" height="105.5"/>
+                                            <rect key="frame" x="16" y="0.0" width="98" height="121.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </imageView>
                                     </subviews>
