--- a/Werkstuk1/Base.lproj/Main.storyboard
+++ b/Werkstuk1/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                                 </constraints>
                                 <state key="normal" title="Toevoegen"/>
                                 <connections>
-                                    <segue destination="YZs-q6-F8A" kind="unwind" unwindAction="unwindToTableVCWithSegue:" id="yWr-Bq-rnN"/>
+                                    <segue destination="YZs-q6-F8A" kind="unwind" identifier="unwindSegueToTable" unwindAction="unwindToTableVCWithSegue:" id="WkG-Ye-cOD"/>
                                 </connections>
                             </button>
                         </subviews>
